--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
-Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
+Flask-Cors==3.0.10
+Flask==1.1.2
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
-scikit-learn>=0.18
+Werkzeug==1.0.1
+astroid==2.4.2
+certifi==2020.6.20
+charset-normalizer==2.0.3
+click==7.1.2
+colorama==0.4.3
+cython
+gunicorn==20.1.0
+idna==3.2
+isort==5.4.2
+itsdangerous==1.1.0
+joblib==0.15.1
+lazy-object-proxy==1.4.3
 matplotlib>=1.4.3
+mccabe==0.6.1
+numpy>=1.19.0
 pandas>=0.19
-nltk>=3.4.5
+pickle-mixin==1.0.2
+pylint==2.6.0
+python-dateutil==2.7
+requests==2.26.0
+scikit-learn>=0.22.1
+scipy
+six==1.16.0
+toml==0.10.1
+urllib3==1.26.6
+wincertstore==0.2
+wrapt==1.12.1
